  any more (Marcin Malich).
- Correct bug in wxTimeSpan::Format() for negative spans.
- Added Vietnamese translation (Tran Ngoc Quan).
- Updated Slovenian translation (Martin Srebotnjak).
- Corrected Serbian locale name (Cody Precord).
- Fix wxURL::GetInputStream() for URLs with special characters in credentials
  (Robert Wruck).

All (GUI):

- wxRTC: fixed input that uses Alt on Mac OS X, for example Polish Pro input.
  Also fixed a bug whereby e.g. Croatian keys didn't work, by moving more code
  to key down handler.
- wxRTC: fixed a problem with HTML list generation.
- wxRTC: no longer deletes a character when content is selected before
  pressing Delete.
- wxRTC: fixed inability to select no superscript and no subscript in
  formatting dialog.
- wxRTC: fixed centering and right-justification when combined with left
  indentation.
- wxRTC: fixed lack of right margin when centering or right-justifying.
- wxRTC: fixed wrong descent when wrapping lines with different font sizes.
- wxRTC: fixed wrapping problem for long lines.
- wxRTC: all buffer margins now respected.
- wxRTC: Added wxRE_CENTRE_CARET to centre the caret line vertically.
- Fixed wxHTML's pagebreaks computation in tables (D.J.Stauffer).
- Fixed wxHtmlWindow::SelectionToText() to correctly insert newlines after
  single-cell paragraphs.
- Fixed wxHTML's line breaks handling in <pre> blocks broken in 2.8.8 (#10120).
- wxHTML: don't include extra whitespace in table cells.
- Implemented wxWindow::DragAcceptFiles() on all platforms.
- Added wxAUI_MGR_LIVE_RESIZE flag to wxAuiManager and made it the default on
  wxMac with CoreGraphics where sash drawing isn't implemented.

All (Unix):

- Return false from wxSingleInstanceChecker::IsAnotherRunning() if an error
  occurred while opening or reading the lock file (Lauri Nurmi).

wxMSW:

- Fixed bug with using non default encoding in wxTextCtrl in ANSI build.
- Restored generation of events for accelerators when there is no menu bar.